*------------------* * Version    1.0.1 * *------------------*  --------------------------------------------  04/01/09 orc@downbelow.pell.portland.or.us 1.4  test.mime:    Rename: test.mime -> tests/test.mime  test4.mime:    Rename: test4.mime -> tests/test4.mime  test3.mime:    Rename: test3.mime -> tests/test3.mime  test2.mime:    Rename: test2.mime -> tests/test2.mime  Makefile.in:    Add ``distclean'' target  unravel.c, ravel.c:    Don't use %M% to get the program name  configure.sh:    new file  unravel.c, ravel.c:    Give the actual VERSION number  Makefile.in:    Pass the version number in Cflags  --------------------------------------------  04/01/09 orc@downbelow.pell.portland.or.us 1.5  ravel.c:    Die if no arguments are provided (pointless to create a    zero-elemented mime document.)  Yes, it's not The Unix    Way, but I've found that when I type ravel without arguments    it's so I can get a diagnostic message.  --------------------------------------------

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,7 +3,7 @@
 #
 
 CXX=@CC@
-CFLAGS += @CFLAGS@
+CFLAGS += @CFLAGS@ -DVERSION=\"@VERSION@\"
 CXXFLAGS=$(CFLAGS)
 
 BINDIR=@exedir@
@@ -24,7 +24,7 @@ unravel: unravel.o qp.o base64.o clear.o openfile.o uudecode.o @OPTIONS@
 clean:
 	rm -f unravel *.o
 
-spotless: clean
+distclean spotless: clean
 	rm -f @CONFIGURE_FILES@ @GENERATED_FILES@
 
 install: install.bin install.man
