update to the latest configure.inc; don't make a librarian while we're at it

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ clean:
 	rm -f ravel unravel *.o
 
 distclean spotless: clean
-	@DISTCLEAN@ @GENERATED_FILES@ @CONFIGURE_FILES@ version.c
+	rm -f @CONFIGURE_FILES@ @GENERATED_FILES@ version.c
 
 install: install.bin install.man
 
