add another test to the test suite

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ clean:
 	rm -f ravel unravel *.o
 
 test:
-	cd tests ; make test
+	@cd tests ; make test
 
 distclean spotless: clean
 	rm -f @CONFIGURE_FILES@ @GENERATED_FILES@ version.c
