--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ version.c: config.h
 clean:
 	rm -f ravel unravel *.o version.c
 
-test:
+test: unravel
 	@cd tests ; make test
 
 distclean spotless: clean
